[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/UI/Level Button.png/0.png" type="Texture" id=1]
[ext_resource path="res://Art/UI/Level Button.png/1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/LevelButton.gd" type="Script" id=3]
[ext_resource path="res://Art/UI/Level Button.png/2.png" type="Texture" id=4]
[ext_resource path="res://Fonts/at01.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/Completed Mark.png" type="Texture" id=6]
[ext_resource path="res://Sounds and Music/CompletedMark.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="LevelButton" type="TextureButton"]
margin_left = 0.334091
margin_top = -0.44545
margin_right = 16.3341
margin_bottom = 15.5546
rect_pivot_offset = Vector2( 8, 8 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
stretch_mode = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -1.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="CompletedMark" type="Sprite" parent="."]
visible = false
position = Vector2( 23.7202, 8.5749 )
texture = ExtResource( 6 )

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="CompletedMarkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="pressed" from="." to="." method="_on_LevelButton_pressed"]
